# nike-paperclip-scrapy-demo

./: .env.example  .gitignore  README.md
.scrape/.work/nike/analyze-page/: detail-1.rendered.cleaned.html  detail-1.rendered.json  detail-1.rendered.metadata.json
.scrape/.work/nike/explore/pages/detail-1/: meta.json  rendered.html
.scrape/nike/: spec.json
.scrape/nike/products/: spec.json
docs/: architecture.md  cost-analysis-runbook.md  monitoring-runbook.md  product-schema.md  project-flow-dark.excalidraw  project-flow.md  system-thinking-loop.md
nike_catalog/: pyproject.toml  scrapy.cfg
nike_catalog/fixtures/: nike_product_fixture.html  test_nike_product_parser.py
nike_catalog/nike_catalog/: __init__.py  monitors.py  parsers.py  pipelines.py  settings.py
nike_catalog/nike_catalog/spiders/: __init__.py  nike.py
paperclip/: company-plan.json
prompts/: zyte-skill-pipeline.md
scrapers/nike/: status.json
scripts/: analyze_scrapy_cost.py  check_sample_output.py  demo-spidermon-break.sh  install-zyte-plugin.sh  monitor-nike-crawl.sh  monitor_nike_crawl.py  preflight.sh  run-nike-crawl.sh  run-scrapy-cost-analysis.sh  run-zyte-skill-pipeline.sh  seed-paperclip.sh  seed_paperclip.py  setup-paperclip.sh  show-latest-items.py  validate-scrapy-output.sh
