[project]
name = "nike-catalog"
version = "0.1.0"
description = "Scrapy + Zyte API Nike product extraction demo"
requires-python = ">=3.11"
dependencies = [
    "parsel>=1.9.1",
    "pytest>=8.2.0",
    "scrapy>=2.11.0",
    "scrapy-zyte-api>=0.28.0",
    "spidermon>=1.23.0",
]

[tool.pytest.ini_options]
testpaths = ["fixtures"]
pythonpath = ["."]
